--- a/resources/style.css
+++ b/resources/style.css
@@ -75,7 +75,7 @@ p.Date,
 p.Main-name {
    margin: auto;
    font-size: 15px;
-   font-family: 'MomsLetterB';
+   font-family: 'MomsLetterL';
    text-align: center; 
    letter-spacing: 3px;
    vertical-align:middle;
@@ -97,7 +97,7 @@ p.Main-name {
 p.name {
    margin: auto;
    font-size: 15px;
-   font-family: 'MomsLetterB';
+   font-family: 'MomsLetterM';
    text-align: center; 
    vertical-align:middle;
    letter-spacing: 3px;
