--- a/resources/style.css
+++ b/resources/style.css
@@ -122,6 +122,7 @@ p.pay2 {
    font-family: 'MomsLetterL';
    text-align: center; 
    vertical-align:middle;
+   line-height: 20px;
    letter-spacing: 3px;
  }
 
